--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,9 +5,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "master", "dev" ]
+    branches: [ "beta" ]
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "beta" ]
 
 jobs:
   build:
