--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-dotnet.yml merge=ours 
+/.github/workflows/dotnet.yml merge=ours 
