--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,8 +4,10 @@
 name: .NET
 
 on:
+  push:
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "beta" ]
+    branches: [ "master" ]
 
 jobs:
   build:
