--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,8 +4,10 @@
 name: .NET
 
 on:
-  pull_request:
+  push:
     branches: [ "beta" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   build:
