--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build_and_release:
 
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         goos: [windows]
