--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,9 +32,14 @@ jobs:
     - name: Build solution
       run: msbuild glc_cs.sln -t:rebuild -property:Configuration=Release
       
+    - name: Zip output
+      run: |
+        cd .\glc_cs\glc_cs\bin\Release\
+        zip release *.*
+        
     - name: Upload build as artifact
       uses: actions/upload-artifact@v2
       with:
         name: GrasshopperComponent
-        path: ./glc_cs/bin/glc_cs.gha
+        path: ./release.zip
     
