--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,13 +34,12 @@ jobs:
       
     - name: Zip output
       run: |
-        cd .\glc_cs\bin\Release\
-        powershell compress-archive *.* ..\Release
+        powershell compress-archive .\glc_cs\bin\Release\*.* Release
         dir ../
         
     - name: Upload build as artifact
       uses: actions/upload-artifact@v2
       with:
         name: glc_release
-        path: ../Release.zip
+        path: Release.zip
     
