--- a/glc_cs/packages.config
+++ b/glc_cs/packages.config
@@ -5,7 +5,15 @@
   <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net481" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net481" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net481" />
   <package id="MySql.Data" version="8.1.0" targetFramework="net481" />
+  <package id="NAudio" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.Asio" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.Core" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.Midi" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.Wasapi" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.WinForms" version="2.1.0" targetFramework="net481" />
+  <package id="NAudio.WinMM" version="2.1.0" targetFramework="net481" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net481" />
