--- a/glc_cs/glc_cs.csproj
+++ b/glc_cs/glc_cs.csproj
@@ -150,6 +150,9 @@
     <Reference Include="NAudio.WinMM, Version=2.1.0.0, Culture=neutral, PublicKeyToken=e279aa5131008a41, processorArchitecture=MSIL">
       <HintPath>..\packages\NAudio.WinMM.2.1.0\lib\netstandard2.0\NAudio.WinMM.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -242,6 +245,12 @@
     <Compile Include="DLsite.Designer.cs">
       <DependentUpon>DLsite.cs</DependentUpon>
     </Compile>
+    <Compile Include="vndb.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="vndb.Designer.cs">
+      <DependentUpon>vndb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Memo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -323,6 +332,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="vndb.resx">
+      <DependentUpon>vndb.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
