--- a/glc_cs/packages.config
+++ b/glc_cs/packages.config
@@ -14,6 +14,7 @@
   <package id="NAudio.Wasapi" version="2.1.0" targetFramework="net481" />
   <package id="NAudio.WinForms" version="2.1.0" targetFramework="net481" />
   <package id="NAudio.WinMM" version="2.1.0" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net481" />
